--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </p>
               <button class = "btn btn-secondary btn-lg text-light">Enroll Now</button>
           </div>
-          <img class = "img-fluid w-50 d-none d-sm-block" src="../img/hi.jpg" alt="#">
+          <img class = "img-fluid w-50 d-none d-sm-block" src="hi.jpg" alt="#">
        </div>
     </div>
   </section>
@@ -88,7 +88,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col-md text-center">
           <div class="card h-100 bg-dark text-light">
-            <img src="../img/in-person2.jpg" class="card-img-top" alt="...">
+            <img src="In-person2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">In-person</h5>
               <p class="card-text">Connect with like-minded go-getters from all over the world and hear from
