--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="col-md  text-center">
           <div class="card h-100 bg-dark text-light">
-            <img src="../img/hybrid.jpg" class="card-img-top" alt="...">
+            <img src="hybrid.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Hybird</h5>
               <p class="card-text">Connect with like-minded go-getters from all over the world and hear 
@@ -151,7 +151,7 @@
             <i class="bi bi-chevron-right mt-3"></i>Read More</a>
       </div>
        <div class="col-md">
-         <img class = "img-fluid rounded" src ="../img/In-person2.jpg" alt="#">
+         <img class = "img-fluid rounded" src ="In-person2.jpg" alt="#">
        </div>
       </div>
     </div>
@@ -164,7 +164,7 @@
   <div class="container">
     <div class="row align-items-center justify-content-between p-5">
       <div class="col-md">
-        <img class = "img-fluid rounded" src ="../img/collabo.svg" alt="#">
+        <img class = "img-fluid rounded" src ="collabo.svg" alt="#">
       </div>
       <div class="col-md p-5">
         <h2 class="">MBA Progarm</h2>
