--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md  text-center">
           <div class="card h-100 bg-dark text-light">
-            <img src="../img/in-person.jpg" class="card-img-top" alt="...">
+            <img src="in-person.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Virtual</h5>
               <p class="card-text">Connect with like-minded go-getters from all over the world and hear
