Replaced one of the pictures with the founfers own under in-person  learning

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col-md text-center">
           <div class="card h-100 bg-dark text-light">
-            <img src="In-person2.jpg" class="card-img-top" alt="...">
+            <img src="amaecom.jpg" class="card-img-top h-100" alt="...">
             <div class="card-body">
               <h5 class="card-title">In-person</h5>
               <p class="card-text">Connect with like-minded go-getters from all over the world and hear from
